# webkpasswd

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
app/: app.py  config.py  errors.py  forms.py  kpasswd.py  smbpasswd.py
app/static/: script.js  style.css  zxcvbn-4.4.1.min.js
app/templates/: _formhelpers.html  index.html  layout.html
app/translations/: messages.pot
app/translations/fr/LC_MESSAGES/: messages.mo  messages.po
systemd-files/: webkpasswd.nginx  webkpasswd.service  webkpasswd.socket  webkpasswd.sysusers  webkpasswd.tmpfiles
webkpasswd/: __init__.py  config.py  kpasswd.py  smbpasswd.py
webkpasswd/static/: script.js  style.css  zxcvbn-4.4.2.min.js
webkpasswd/templates/: _formhelpers.html  index.html  layout.html
webkpasswd/translations/: messages.pot
webkpasswd/translations/fr/LC_MESSAGES/: messages.mo  messages.po
