[project]
name = "webkpasswd"
description = "Web interface to change ActiveDirectory password with kpasswd or smbpasswd protocols"
version = "0.4.1"
authors = [
    { name = "Romain Labolle", email = "romain.labolle@universite-lyon.fr" }
]
dependencies = [
    "Flask>=3.0.2",
    "Flask-WTF>=1.2.0",
    "flask-babel>=4.0.0",
    "gunicorn>=23.0.0",
    "pwnedpasswords>=2.0.0"
]
requires-python = ">=3.5"

[project.optional-dependencies]
smb = ["impacket>=0.11.0"]
krb = ["kerberos>=1.3.1"]

[tool.setuptools.package-data]
webkpasswd = ["static/*", "templates/*", "translations/**/*.mo"]

[build-system]
requires = ["setuptools"]
